cabal-version: 3.0
name: cloudflare-worker
version: 0.1.0.0
synopsis: WASM binding for GHC WASM backend.
-- description:
homepage: https://github.com/konn/cloudflare-worker-wasm#readme
license: BSD-3-Clause
license-file: LICENSE
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: 2024 (c) Hiromi ISHII
category: Web
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common defaults
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints

  build-depends:
    aeson,
    async,
    base >=4.7 && <5,
    bytestring,
    containers,
    ghc-wasm-compat,
    ghc-wasm-jsobjects,
    lucid2,
    text,
    tomland,

  default-language: GHC2021
  autogen-modules: Paths_cloudflare_worker
  other-modules: Paths_cloudflare_worker

  if !os(wasi)
    ghc-options:
      -fplugin
      GHC.Wasm.FFI.Plugin

library
  import: defaults
  build-depends:
    aeson,
    attoparsec-aeson,
    base64-bytestring,
    bytestring,
    case-insensitive,
    containers,
    effectful,
    ghc-wasm-jsobjects,
    safe-exceptions,
    steward-core,
    streaming,
    streaming-attoparsec,
    streaming-bytestring,
    text,
    time,
    time-effectful,
    transformers,
    vector,
    wasm-linear-base,
    web-sys-hs,

  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules:
    Language.WASM.JSVal.Convert
    Network.Cloudflare.Worker
    Network.Cloudflare.Worker.Binding
    Network.Cloudflare.Worker.Binding.D1
    Network.Cloudflare.Worker.Binding.KV
    Network.Cloudflare.Worker.Crypto
    Network.Cloudflare.Worker.FetchAPI
    Network.Cloudflare.Worker.Handler
    Network.Cloudflare.Worker.Handler.Fetch
    Network.Cloudflare.Worker.Request
    Network.Cloudflare.Worker.Response

executable hello-worker
  import: defaults
  build-depends: cloudflare-worker
  main-is: Main.hs
  hs-source-dirs: app
  -- cabal-gild: discover app --exclude=app/Main.hs
  other-modules:
  ghc-options: -O2
  build-depends:
    streaming,
    streaming-bytestring,

  if os(wasi)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=handlers"
