cabal-version: 3.0
name: ghc-wasm-compat
version: 0.1.0.0
-- synopsis:
-- description:
homepage: https://github.com/konn/ghc-wasm-compat#readme
license: BSD-3-Clause
license-file: LICENSE
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: 2024 (c) Hiromi ISHII
category: Web
build-type: Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  build-depends: ghc

  if os(wasi)
    build-depends: ghc-experimental
    reexported-modules: GHC.Wasm.Prim
    hs-source-dirs:
      src-wasm-internal
      src-wasm

    -- cabal-gild: discover src-wasm
    exposed-modules: GHC.Wasm.FFI.Plugin
    -- cabal-gild: discover src-wasm-internal
    other-modules: GHC.Wasm.Compat.Flags
  else
    build-depends: syb
    hs-source-dirs:
      src-compat
      src-compat-internal

    -- cabal-gild: discover src-compat
    exposed-modules:
      GHC.Wasm.FFI.Plugin
      GHC.Wasm.Prim

    -- cabal-gild: discover src-compat-internal
    other-modules: GHC.Wasm.Compat.Flags

  default-language: Haskell2010
  build-depends:
    base >=4.7 && <5,
    template-haskell,

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
