cabal-version: 3.0
name: ghc-wasm-jsobjects
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/ghc-wasm-earthly/ghc-wasm-jsobjects#readme>
homepage: https://github.com/konn/ghc-wasm-earthly#readme
bug-reports: https://github.com/konn/ghc-wasm-earthly/issues
author:
maintainer:
copyright: (c)  2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.8.4 || ==9.10.0.20240412

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/ghc-wasm-earthly
  subdir: ghc-wasm-jsobjects

common defaults
  autogen-modules: Paths_ghc_wasm_jsobjects
  other-modules: Paths_ghc_wasm_jsobjects
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: Haskell2010
  build-depends: base >=4.7 && <5

library
  import: defaults
  -- cabal-gild: discover src
  exposed-modules:
    GHC.Wasm.Object.Builtins
    GHC.Wasm.Object.Builtins.Array
    GHC.Wasm.Object.Builtins.BigInt
    GHC.Wasm.Object.Builtins.Buffer
    GHC.Wasm.Object.Builtins.Dictionary
    GHC.Wasm.Object.Builtins.Iterator
    GHC.Wasm.Object.Builtins.Record
    GHC.Wasm.Object.Builtins.Sequence
    GHC.Wasm.Object.Builtins.String
    GHC.Wasm.Object.Core

  hs-source-dirs: src
  build-depends:
    bytestring,
    containers,
    ghc-wasm-compat,
    lens,
    primitive,
    reflection,
    streaming,
    text,
    total,
    vector,
    wasm-linear-base,

  if !os(wasi)
    ghc-options:
      -fobject-code
      -fplugin
      GHC.Wasm.FFI.Plugin

executable ghc-wasm-jsobjects-exe
  import: defaults
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: ghc-wasm-jsobjects

test-suite ghc-wasm-jsobjects-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -O2
    -rtsopts
    -with-rtsopts=-N

  build-depends: ghc-wasm-jsobjects
