cabal-version: 3.0
name: microaeson-generics
version: 0.1.0.0
homepage: https://github.com/konn/microaeson-generics#readme
license: BSD-3-Clause
license-file: LICENSE
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: 2024 (c) Hiromi ISHII
category: Web
build-type: Simple
extra-doc-files:
  CHANGELOG.md
  README.md

library
  hs-source-dirs: src
  -- cabal-gild: discover src
  exposed-modules: Data.Aeson.Micro.Generics
  autogen-modules: Paths_microaeson_generics
  other-modules: Paths_microaeson_generics
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5,
    containers,
    microaeson,
    text,

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
