cabal-version: 3.4
name: network
version: 3.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/ghc-wasm-earthly/network-ghc-wasm#readme>
homepage: https://github.com/konn/ghc-wasm-earthly#readme
bug-reports: https://github.com/konn/ghc-wasm-earthly/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: (c) Hiromi ISHII 2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.10.1 || ==9.10.0.20240412

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/ghc-wasm-earthly
  subdir: network-ghc-wasm

common defaults
  autogen-modules: Paths_network
  other-modules: Paths_network
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: Haskell2010
  build-depends: base >=4.7 && <5

library
  import: defaults
  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs --exclude=src/**/Internal/**/*.hs
  exposed-modules: Network.Socket
  -- cabal-gild: discover src --include=src/**/Internal.hs --include=src/**/Internal/**/*.hs
  other-modules:
  build-depends:
    deepseq
