cabal-version: 3.4
name: servant-client-fetch
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/ghc-wasm-earthly/servant-client-fetch#readme>
homepage: https://github.com/konn/ghc-wasm-earthly#readme
bug-reports: https://github.com/konn/ghc-wasm-earthly/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: (c) Hiromi ISHII 2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.10.1 || ==9.10.0.20240412

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/ghc-wasm-earthly
  subdir: servant-client-fetch

common defaults
  autogen-modules: Paths_servant_client_fetch
  other-modules: Paths_servant_client_fetch
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  if !os(wasi)
    ghc-options:
      -fplugin
      GHC.Wasm.FFI.Plugin
  default-language: GHC2021
  build-depends:
    base >=4.7 && <5,
    ghc-wasm-compat,

library
  import: defaults
  build-depends:
    bytestring,
    case-insensitive,
    containers,
    ghc-wasm-compat,
    ghc-wasm-jsobjects,
    http-media,
    http-types,
    network-uri,
    safe-exceptions,
    servant,
    servant-client-core,
    streaming,
    streaming-bytestring,
    text,
    transformers,
    unliftio-core,
    wasm-linear-base,
    web-sys-hs,

  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs --exclude=src/**/Internal/**/*.hs
  exposed-modules: Servant.Client.FetchAPI
  -- cabal-gild: discover src --include=src/**/Internal.hs --include=src/**/Internal/**/*.hs
  other-modules:
