cabal-version: 3.4
name: steward-fetch
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/ghc-wasm-earthly/steward-fetch#readme>
homepage: https://github.com/konn/ghc-wasm-earthly#readme
bug-reports: https://github.com/konn/ghc-wasm-earthly/issues
author: Hiromi ISHII
maintainer: konn.jinro_at_gmail.com
copyright: (c) Hiromi ISHII 2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.10.1 || ==9.10.0.20240412

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/ghc-wasm-earthly
  subdir: steward-fetch

common defaults
  autogen-modules: Paths_steward_fetch
  other-modules: Paths_steward_fetch
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: Haskell2010
  build-depends: base >=4.7 && <5

  if !os(wasi)
    build-depends: ghc-wasm-compat
    ghc-options:
      -fplugin
      GHC.Wasm.FFI.Plugin

library
  import: defaults
  hs-source-dirs: src
  -- cabal-gild: discover src --exclude=src/**/Internal.hs --exclude=src/**/Internal/**/*.hs
  exposed-modules: Steward.Client.Fetch
  -- cabal-gild: discover src --include=src/**/Internal.hs --include=src/**/Internal/**/*.hs
  other-modules:
  build-depends:
    bytestring,
    case-insensitive,
    containers,
    ghc-wasm-compat,
    ghc-wasm-jsobjects,
    http-types,
    safe-exceptions,
    steward-core,
    streaming,
    streaming-bytestring,
    text,
    transformers,
    unordered-containers,
    wasm-linear-base,
    web-sys-hs,
