cabal-version: 3.0
name: steward-workers
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/ghc-wasm-earthly/steward-workers#readme>
homepage: https://github.com/konn/ghc-wasm-earthly#readme
bug-reports: https://github.com/konn/ghc-wasm-earthly/issues
author:
maintainer:
copyright: (c) Hiromi ISHII 2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.8.4 || ==9.10.0.20240412

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/ghc-wasm-earthly
  subdir: steward-workers

common defaults
  autogen-modules: Paths_steward_workers
  other-modules: Paths_steward_workers
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: GHC2021
  default-extensions:
    ConstraintKinds
    DataKinds
    GADTs
    ImpredicativeTypes
    PolyKinds
    RequiredTypeArguments
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

  if !os(wasi)
    ghc-options:
      -fplugin
      GHC.Wasm.FFI.Plugin
  build-depends: base >=4.7 && <5

library
  import: defaults
  -- cabal-gild: discover src --include=src/**/*.hs
  exposed-modules: Steward.Workers
  hs-source-dirs: src
  build-depends:
    aeson,
    bytestring,
    case-insensitive,
    cloudflare-worker,
    containers,
    effectful,
    ghc-wasm-compat,
    ghc-wasm-jsobjects,
    http-media,
    http-types,
    lens,
    network-uri,
    safe-exceptions,
    steward-core,
    streaming,
    streaming-bytestring,
    text,
    time,
    time-effectful,
    transformers,

executable steward-workers-demo
  import: defaults
  build-depends: cloudflare-worker
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options: -O2
  build-depends:
    aeson,
    bytestring,
    cloudflare-worker,
    effectful,
    ghc-wasm-compat,
    ghc-wasm-jsobjects,
    steward-workers,
    text,

  if os(wasi)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--export=handlers"

test-suite steward-workers-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -O2
    -rtsopts
    -with-rtsopts=-N

  build-depends: steward-workers
