cabal-version: 3.0
name: wasm-linear-base
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/ghc-wasm-earthly/wasm-linear-base#readme>
homepage: https://github.com/konn/ghc-wasm-earthly#readme
bug-reports: https://github.com/konn/ghc-wasm-earthly/issues
author:
maintainer:
copyright: (c)  2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.10.0

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/ghc-wasm-earthly
  subdir: wasm-linear-base

common defaults
  autogen-modules: Paths_wasm_linear_base
  other-modules: Paths_wasm_linear_base
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  if !os(wasi)
    ghc-options:
      -fplugin
      GHC.Wasm.FFI.Plugin

    build-depends: ghc-wasm-compat
  default-language: Haskell2010
  build-depends: base >=4.7 && <5

library
  import: defaults
  build-depends:
    ghc-wasm-compat,
    vector,

  -- cabal-gild: discover src
  exposed-modules:
    Wasm.Control.Functor.Linear
    Wasm.Data.Array.Destination
    Wasm.Data.Array.Destination.Generic
    Wasm.Data.Array.Destination.JSVal
    Wasm.Data.Function.Linear
    Wasm.Data.Functor.Linear
    Wasm.Data.Unrestricted.Linear
    Wasm.Data.Unrestricted.Linear.Monadic
    Wasm.JSVal.Freeze
    Wasm.Prelude.Linear
    Wasm.System.IO.Linear
    Wasm.Unsafe.Linear

  hs-source-dirs: src
  default-extensions:
    DataKinds
    GADTs
    LinearTypes
    MultiParamTypeClasses
    PolyKinds
    UnboxedSums
    UnboxedTuples
    UnliftedNewtypes

executable wasm-linear-base-exe
  import: defaults
  hs-source-dirs: app
  main-is: Main.hs
  -- cabal-gild: discover app --exclude=app/Main.hs
  other-modules:
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: wasm-linear-base

test-suite wasm-linear-base-test
  import: defaults
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Test.hs
  -- cabal-gild: discover test --exclude=test/Test.hs
  other-modules:
  ghc-options:
    -threaded
    -O2
    -rtsopts
    -with-rtsopts=-N

  build-depends: wasm-linear-base
