cabal-version: 3.0
name: web-sys-hs
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/ghc-wasm-earthly/web-sys-hs#readme>
homepage: https://github.com/konn/ghc-wasm-earthly#readme
bug-reports: https://github.com/konn/ghc-wasm-earthly/issues
author:
maintainer:
copyright: (c)  2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.8.4
  ghc ==9.10.0.20240413

extra-doc-files:
  CHANGELOG.md
  README.md

data-dir: webidls

source-repository head
  type: git
  location: https://github.com/konn/ghc-wasm-earthly
  subdir: web-sys-hs

common defaults
  autogen-modules: Paths_web_sys_hs
  other-modules: Paths_web_sys_hs
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: Haskell2010
  build-depends: base >=4.7 && <5

library
  import: defaults
  -- cabal-gild: discover src
  exposed-modules: Lib
  hs-source-dirs: src
  build-depends: webidl-core

executable web-sys-hs-exe
  import: defaults
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: web-sys-hs

test-suite web-sys-hs-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -O2
    -rtsopts
    -with-rtsopts=-N

  build-depends: web-sys-hs
