cabal-version: 3.0
name: webidl-codegen-wasm
version: 0.1.0.0
description: Please see the README on GitHub at <https://github.com/konn/ghc-wasm-earthly/webidl-codegen-wasm#readme>
homepage: https://github.com/konn/ghc-wasm-earthly#readme
bug-reports: https://github.com/konn/ghc-wasm-earthly/issues
author:
maintainer:
copyright: (c)  2024- present
license: BSD-3-Clause
license-file: LICENSE
build-type: Simple
tested-with:
  ghc ==9.8.4 || ==9.10.0.20240412

extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/konn/ghc-wasm-earthly
  subdir: webidl-codegen-wasm

common defaults
  autogen-modules: Paths_webidl_codegen_wasm
  other-modules: Paths_webidl_codegen_wasm
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-export-lists
    -Wmissing-home-modules
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

  default-language: Haskell2010
  build-depends: base >=4.7 && <5

library
  import: defaults
  -- cabal-gild: discover src
  exposed-modules:
    Language.Haskell.Parser.Ex.Helper
    Language.WebIDL.CodeGen.GHC.Wasm
    Language.WebIDL.CodeGen.GHC.Wasm.App

  hs-source-dirs: src
  build-depends:
    aeson,
    algebraic-graphs,
    barbies,
    bytestring,
    containers,
    dlist,
    effectful,
    foldl,
    ghc-lib-parser,
    ghc-lib-parser-ex,
    ghc-wasm-jsobjects,
    hashable,
    lens,
    megaparsec,
    mtl,
    neat-interpolation,
    optparse-applicative,
    path,
    path-io,
    safe-exceptions,
    scientific,
    syb,
    text,
    transformers,
    unordered-containers,
    vector,
    webidl-core,
    yaml,

executable webidl-codegen-wasm
  import: defaults
  main-is: Main.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  build-depends: webidl-codegen-wasm

test-suite webidl-codegen-wasm-test
  import: defaults
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options:
    -threaded
    -O2
    -rtsopts
    -with-rtsopts=-N

  build-depends: webidl-codegen-wasm
